Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -111,22 +111,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-9779febaef56>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcov\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.115   0.0575 -1.2325]\n",
+      " [ 0.0575  3.757  -0.8775]\n",
+      " [-1.2325 -0.8775 14.525 ]]\n"
      ]
     }
    ],
    "source": [
+    "import numpy as np\n",
+    "X = np.array([ [0.1, 0.3, 0.4, 0.8, 0.9],\n",
+    "               [3.2, 2.4, 2.4, 0.1, 5.5],\n",
+    "               [10., 8.2, 4.3, 2.6, 0.9]\n",
+    "             ])\n",
     "print( np.cov(X) )"
    ]
   },
