--- a/index.ipynb
+++ b/index.ipynb
@@ -125,12 +125,7 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "X = np.array([ [0.1, 0.3, 0.4, 0.8, 0.9],\n",
-    "               [3.2, 2.4, 2.4, 0.1, 5.5],\n",
-    "               [10., 8.2, 4.3, 2.6, 0.9]\n",
-    "             ])\n",
-    "print( np.cov(X) )"
+    "import numpy as np\n"
    ]
   },
   {
