Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -125,7 +125,9 @@
     }
    ],
    "source": [
-    "import numpy as np\n"
+    "import numpy as np\n",
+    "\n",
+    "X = np.array([])"
    ]
   },
   {
