--- a/index.ipynb
+++ b/index.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,8 @@
     "\n",
     "X = np.array([[0.1, 0.3, 0.4, 0.8, 0.9],\n",
     "               [3.2, 2.4, 2.4, 0.1, 5.5],\n",
-    "               [10., 8.2, 4.3, 2.6, 0.9]])"
+    "               [10., 8.2, 4.3, 2.6, 0.9]])\n",
+    "print( np.cov(X) )"
    ]
   },
   {
