Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -269,7 +269,8 @@
     }
    ],
    "source": [
-    "from numpy import arra"
+    "from numpy import array\n",
+    "from numpy.linalg"
    ]
   },
   {
