Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -270,7 +270,7 @@
    ],
    "source": [
     "from numpy import array\n",
-    "from numpy.linalg"
+    "from numpy.linalg import eig\n"
    ]
   },
   {
