Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -270,7 +270,9 @@
    ],
    "source": [
     "from numpy import array\n",
-    "from numpy.linalg import eig\n"
+    "from numpy.linalg import eig\n",
+    "#define matrix\n",
+    "\n"
    ]
   },
   {
