Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -272,7 +272,8 @@
     "from numpy import array\n",
     "from numpy.linalg import eig\n",
     "#define matrix\n",
-    "\n"
+    "\n",
+    "A= array([])"
    ]
   },
   {
