Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -273,7 +273,7 @@
     "from numpy.linalg import eig\n",
     "#define matrix\n",
     "\n",
-    "A= array([])"
+    "A= array([1,2,3,],[])"
    ]
   },
   {
