--- a/index.ipynb
+++ b/index.ipynb
@@ -273,7 +273,8 @@
     "from numpy.linalg import eig\n",
     "#define matrix\n",
     "\n",
-    "A= array([1,2,3,],[4,5,6], [])"
+    "A= array([1,2,3,],[4,5,6], [7,8,9])\n",
+    "print()"
    ]
   },
   {
