--- a/index.ipynb
+++ b/index.ipynb
@@ -274,7 +274,8 @@
     "#define matrix\n",
     "\n",
     "A= array([1,2,3,],[4,5,6], [7,8,9])\n",
-    "print()"
+    "print(A)\n",
+    "#"
    ]
   },
   {
