--- a/index.ipynb
+++ b/index.ipynb
@@ -275,7 +275,7 @@
     "\n",
     "A= array([1,2,3,],[4,5,6], [7,8,9])\n",
     "print(A)\n",
-    "#"
+    "#calcualte eigendecompositon"
    ]
   },
   {
