Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -277,7 +277,8 @@
     "print(A)\n",
     "#calcualte eigendecompositon\n",
     "\n",
-    "values, vectors "
+    "values, vectors = eig(A)\n",
+    "print(c)"
    ]
   },
   {
