Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -251,23 +251,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1 2 3]\n",
-      " [4 5 6]\n",
-      " [7 8 9]]\n",
-      "[ 1.61168440e+01 -1.11684397e+00 -9.75918483e-16]\n",
-      "[[-0.23197069 -0.78583024  0.40824829]\n",
-      " [-0.52532209 -0.08675134 -0.81649658]\n",
-      " [-0.8186735   0.61232756  0.40824829]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from numpy import array\n",
     "from numpy.linalg import eig\n",
@@ -278,7 +264,8 @@
     "#calcualte eigendecompositon\n",
     "\n",
     "values, vectors = eig(A)\n",
-    "print(c)"
+    "print(values)\n",
+    "print(vectors)"
    ]
   },
   {
