--- a/index.ipynb
+++ b/index.ipynb
@@ -251,15 +251,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]\n",
+      " [7 8 9]]\n",
+      "[ 1.61168440e+01 -1.11684397e+00 -9.75918483e-16]\n",
+      "[[-0.23197069 -0.78583024  0.40824829]\n",
+      " [-0.52532209 -0.08675134 -0.81649658]\n",
+      " [-0.8186735   0.61232756  0.40824829]]\n"
+     ]
+    }
+   ],
    "source": [
     "from numpy import array\n",
     "from numpy.linalg import eig\n",
     "#define matrix\n",
     "\n",
-    "A= array([1,2,3,],[4,5,6], [7,8,9])\n",
+    "A= array([[1,2,3,],[4,5,6], [7,8,9]])\n",
     "print(A)\n",
     "#calcualte eigendecompositon\n",
     "\n",
