Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -316,7 +316,9 @@
     }
    ],
    "source": [
-    "#confirm first eigenvector"
+    "#confirm first eigenvector\n",
+    "\n",
+    "B = A."
    ]
   },
   {
