Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -319,7 +319,8 @@
     "#confirm first eigenvector\n",
     "\n",
     "B = A.dot(vectors[;, 0])\n",
-    "print(B)\n"
+    "print(B)\n",
+    "C = vectors[:,0]"
    ]
   },
   {
