--- a/index.ipynb
+++ b/index.ipynb
@@ -320,7 +320,7 @@
     "\n",
     "B = A.dot(vectors[;, 0])\n",
     "print(B)\n",
-    "C = vectors[:,0]"
+    "C = vectors[:, 0] * values[0]\n"
    ]
   },
   {
