Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -303,15 +303,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ -3.73863537  -8.46653421 -13.19443305]\n",
-      "[ -3.73863537  -8.46653421 -13.19443305]\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-7-4d61a8c54bd8>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-7-4d61a8c54bd8>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    B = A.dot(vectors[;, 0])\u001b[0m\n\u001b[0m                      ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -320,7 +320,8 @@
     "\n",
     "B = A.dot(vectors[;, 0])\n",
     "print(B)\n",
-    "C = vectors[:, 0] * values[0]\n"
+    "C = vectors[:, 0] * values[0]\n",
+    "print(C)"
    ]
   },
   {
