Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -318,7 +318,7 @@
    "source": [
     "#confirm first eigenvector\n",
     "\n",
-    "B = A.dot(vectors[;, 0])\n",
+    "B = A.dot(vectors[, 0])\n",
     "print(B)\n",
     "C = vectors[:, 0] * values[0]\n",
     "print(C)"
