Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -364,7 +364,8 @@
     }
    ],
    "source": [
-    "from numpy.linalg "
+    "from numpy.linalg import inv\n",
+    "#create matri"
    ]
   },
   {
