--- a/index.ipynb
+++ b/index.ipynb
@@ -365,7 +365,7 @@
    ],
    "source": [
     "from numpy.linalg import inv\n",
-    "#create matri"
+    "#create matrix for eigenvectors\n"
    ]
   },
   {
