Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -365,7 +365,9 @@
    ],
    "source": [
     "from numpy.linalg import inv\n",
-    "#create matrix for eigenvectors\n"
+    "#create matrix for eigenvectors\n",
+    "Q = vectors\n",
+    "# cr"
    ]
   },
   {
