Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -367,7 +367,7 @@
     "from numpy.linalg import inv\n",
     "#create matrix for eigenvectors\n",
     "Q = vectors\n",
-    "# cr"
+    "# create inverse of eigenv"
    ]
   },
   {
