Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -367,7 +367,8 @@
     "from numpy.linalg import inv\n",
     "#create matrix for eigenvectors\n",
     "Q = vectors\n",
-    "# create inverse of eigenvectors matrix"
+    "# create inverse of eigenvectors matrix\n",
+    "R ="
    ]
   },
   {
