Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -368,7 +368,8 @@
     "#create matrix for eigenvectors\n",
     "Q = vectors\n",
     "# create inverse of eigenvectors matrix\n",
-    "R ="
+    "R = inv(Q)\n",
+    "# create"
    ]
   },
   {
