Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -369,7 +369,7 @@
     "Q = vectors\n",
     "# create inverse of eigenvectors matrix\n",
     "R = inv(Q)\n",
-    "# create"
+    "# create diagonal "
    ]
   },
   {
