Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -369,7 +369,8 @@
     "Q = vectors\n",
     "# create inverse of eigenvectors matrix\n",
     "R = inv(Q)\n",
-    "# create diagonal matrix from eigenvalues"
+    "# create diagonal matrix from eigenvalues\n",
+    "L = np.diag"
    ]
   },
   {
