--- a/index.ipynb
+++ b/index.ipynb
@@ -370,7 +370,8 @@
     "# create inverse of eigenvectors matrix\n",
     "R = inv(Q)\n",
     "# create diagonal matrix from eigenvalues\n",
-    "L = np.diag"
+    "L = np.diag(values)\n",
+    "# reconstr"
    ]
   },
   {
