Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -371,7 +371,7 @@
     "R = inv(Q)\n",
     "# create diagonal matrix from eigenvalues\n",
     "L = np.diag(values)\n",
-    "# reconstr"
+    "# reconstruct the original matrix\n"
    ]
   },
   {
