Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -371,7 +371,8 @@
     "R = inv(Q)\n",
     "# create diagonal matrix from eigenvalues\n",
     "L = np.diag(values)\n",
-    "# reconstruct the original matrix\n"
+    "# reconstruct the original matrix\n",
+    "B = Q.do"
    ]
   },
   {
