Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -372,7 +372,7 @@
     "# create diagonal matrix from eigenvalues\n",
     "L = np.diag(values)\n",
     "# reconstruct the original matrix\n",
-    "B = Q.dot(L).dot()"
+    "B = Q.dot(L).dot(R)"
    ]
   },
   {
