--- a/index.ipynb
+++ b/index.ipynb
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,8 @@
     "# create diagonal matrix from eigenvalues\n",
     "L = np.diag(values)\n",
     "# reconstruct the original matrix\n",
-    "B = Q.dot(L).dot(R)"
+    "B = Q.dot(L).dot(R)\n",
+    "print(B)"
    ]
   },
   {
